# opengl-imgui-game

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  game.h  init.h  logger.h  main.h  mesh.h  player.h  renderer.h  sceneManager.h  sceneObject.h  shader.h  texture.h  windowcontext.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  game.cpp  main.cpp  mesh.cpp  player.cpp  renderer.cpp  sceneManager.cpp  sceneObject.cpp  shader.cpp  texture.cpp  windowcontext.cpp
